# jarabot-simulator-navigation

./: README.md
jarabot_sim_navigation2/: CMakeLists.txt  package.xml
jarabot_sim_navigation2/config/: nav2_params.yaml
jarabot_sim_navigation2/launch/: nav2_bringup_sim.launch.py
jarabot_sim_navigation2/maps/: map.pgm  map.yaml
tools/: ros2_topic_viewer.py  set_initialpose.py
