<?xml version="1.0"?>
<package format="3">
  <name>jarabot_sim_navigation2</name>
  <version>0.0.0</version>
  <description>Nav2 bringup wrapper for Jarabot simulator</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
